src/css/projects.css
@keyframes lighteffect {
    from {
        opacity: 1;
    }
    to {
        opacity: 0;
    }
}

@keyframes moveforward {
    from {
        transform: translateX(0);
    }
    to {
        transform: translateX(1rem);
    }
}

#projects {
    display: flex;
    flex-direction: column;
    justify-content: start;
    padding-block: 5rem;
    height: 100%;

    & .projects-content {
        align-items: center;
        display: flex;
        flex-direction: column;

        & .projects-menu {
            padding: 1rem;

            & ul {
                display: flex;
                flex-direction: row;
                gap: 2rem;
                padding: 0;

                & li {
                    align-items: start;
                    display: flex;
                    flex-direction: column;
                    justify-content: flex-end;
                    font-weight: 500;
                    list-style: none;
                    text-align: left;
                    width: 7rem;

                    & hr {
                        transition: width 200ms;
                        width: 2rem;
                    }
                }

                & li:hover {
                    & hr {
                        width: 100%;
                    }
                }

                & .selected {
                    & hr {
                        width: 100%;
                    }
                }
            }
        }

        & .project-container {
            align-items: center;
            display: flex;
            flex-direction: row;
            justify-content: center;
            gap: 2rem;
            overflow: hidden;
            text-align: left;
            transition: opacity 200ms;
            max-width: 200rem;

            & .images {
                align-items: center;
                display: flex;
                flex-direction: column;
                height: 100%;

                & .images-container {
                    border: 0.2rem solid var(--text-color);
                    border-radius: 0.5rem;
                    display: flex;
                    flex-direction: row;
                    gap: 1rem;
                    min-height: 27rem;
                    overflow-x: scroll;
                    scroll-behavior: smooth;
                    width: 45rem;
                }

                & .scroll-sign-container {
                    min-height: 3rem;

                    & .scroll-sign {
                        animation: lighteffect 1s linear infinite alternate;
                        display: flex;
                        flex-direction: row;
                        font-style: italic;
                        font-weight: 600;
                        gap: 0.5rem;

                        & .arrow {
                            animation: moveforward 1s linear infinite alternate;
                            display: flex;
                            font-weight: 500;
                        }
                    }

                    & .hidden {
                        display: none;
                    }
                }
            }

            & .details {
                display: flex;
                flex-direction: column;
                gap: 1rem;
                padding: 1rem;

                & a {
                    width: fit-content;
                }
            }
        }
    }
}

@media only screen and (max-width: 992px) {
    #projects {
        & .projects-content {
            gap: 1rem;
            height: 100%;
            justify-content: space-between;
            width: 100%;
            & .projects-menu {
                padding: 0;
                & ul {
                    gap: 0.5rem;
                }
            }
            & .project-container {
                flex-direction: column;
                gap: 1rem;
                & .images {
                    & .images-container {
                        width: 100%;
                    }
                }
            }
        }
    }
}

@media only screen and (max-width: 768px) {
    #projects {
        & .projects-content {
            & .project-container {
                & .images {
                    display: none;
                }
            }
        }
    }
}

@media only screen and (min-width: 1900px) {
    #projects {
        & .projects-content {
            gap: 2rem;
            & .project-container {
                & .images {
                    & .images-container {
                        width: 60rem;
                    }
                }
            }
        }
    }
}

